<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_rate_title"
        android:paddingTop="5dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewFontPreview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_rate_message"
        android:layout_margin="15dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/Semi_TransBlack" />

    <Button
        android:id="@+id/ButtonRateNow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_button_ratenow" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/Semi_TransBlack" />

    <Button
        android:id="@+id/ButtonRateLater"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_button_ratelater"/>

</LinearLayout>