<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical"
    android:background="@color/Gray"
    android:gravity="center"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/ImageViewArrowBottomRight"
                android:layout_width="match_parent"
                android:layout_height="126dp"
                android:scaleType="fitCenter"
                android:src="@drawable/logolicious_black_txt" />

            <TextView
                android:id="@+id/version"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:maxLines="13"
                android:paddingBottom="10dp"
                android:text="Version 1.9.9"
                android:textColor="@color/Black" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:maxLines="13"
                android:text="@string/app_about_info_broughttoyou"
                android:textColor="@color/Black" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:src="@drawable/the_laughing_dutchmen_logo" />

            <TextView
                android:id="@+id/inAppIncludedItem"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:maxLines="13"
                android:paddingBottom="20dp"
                android:text="@string/app_about_info"
                android:textColor="@color/Black" />

            <ImageView
                android:id="@+id/ImageView02"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingBottom="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/socialmedia_icons" />

            <TextView
                android:id="@+id/TextView04"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:maxLines="13"
                android:paddingBottom="20dp"
                android:text="@string/app_about_info_hashtag"
                android:textColor="@color/Black" />

            <CheckBox
                android:id="@+id/showTipNextime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/label_show_introscreen_nextime"
                android:textSize="6pt" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>