<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|left"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal"
        android:layout_marginBottom="3dp"
        android:gravity="center"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="@dimen/ItemResizeText"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="9dp"
        android:layout_marginRight="9dp"
        android:background="@color/White"
        android:visibility="visible" />

    <CheckBox
        android:id="@+id/showTipNextime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/label_show_introscreen_nextime" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal"
        android:gravity="center"
        android:text="Select your preferred saving option:"
        android:textColor="@color/DodgerBlue"
        android:textSize="@dimen/ItemResizeText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/type1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:text="@string/PNG_HQ" />

        <CheckBox
            android:id="@+id/type2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:enabled="true"
            android:text="@string/JPG_HQ" />

        <CheckBox
            android:id="@+id/type3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:text="@string/JPG" />

        <View
            android:id="@+id/vDottedLine"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginLeft="9dp"
            android:layout_marginRight="9dp"
            android:background="@drawable/dotted"
            android:layerType="software" />

        <CheckBox
            android:id="@+id/promptalways"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don\&apos;t ask me again" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="9dp"
            android:layout_marginRight="9dp"
            android:background="@color/White"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Note: leave empty for automatic file name (we never overwrite originals!)"
            android:textColor="@color/Yellow"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone" >

        <Button
            android:id="@+id/saveFileName"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="9dp"
        android:layout_marginRight="9dp"
        android:background="@color/White"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ImageViewArrowBottomRight"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:scaleType="fitCenter"
            android:src="@drawable/logolicious_white_txt" />

        <TextView
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="13"
            android:paddingBottom="5dp"
            android:text="Version 1.9.9" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:maxLines="13"
            android:text="@string/app_about_info_broughttoyou" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/the_laughing_dutchmen_logo_white" />

        <TextView
            android:id="@+id/inAppIncludedItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="13"
            android:paddingBottom="2dp"
            android:text="@string/app_about_info" />

        <TextView
            android:id="@+id/officialWebsiteLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="15dp"
        android:text="Rename your images?"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <EditText
            android:id="@+id/fileName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="Set your File Name here."
            android:textSize="15sp"
            android:visibility="gone" />
    </LinearLayout>

    <Button
        android:id="@+id/save"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="35dip"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:background="@drawable/button_white_edge"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="Save"
        android:visibility="gone" />

    <WebView
        android:id="@+id/notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:visibility="gone" />

</LinearLayout>